[tool.poetry]
name = "deepvalueanalysisbot"
version = "0.1.0"
description = ""
authors = ["brandon <brandonskerritt51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
